hphp/hack/test/typecheck/fc_enum_13.php.exp
File "fc_enum_13.php", line 5, characters 26-39:
HH\BuiltinEnum is an implementation internal class that can not be used directly (Naming[2053])
